--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,25 @@
-/*  your css code here. If applicable */
+*{
+	padding:0;
+	margin:0;
+	box-sizing:border-box;
+}
+img{
+	object-fit:cover;
+	width:60vw;
+	height:100vh;
+}
+.hero{
+	border:2px solid black;
+	width:100vw;
+	height:100vh;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+button{
+	padding:10px;
+	background-color:#FE0001;
+	color:white;
+	border-radius:10px;
+	border:none;
+}
